[package]
name = "atproto"
edition = "2021"
version = "0.0.1"

[dependencies]
futures = "0.3.25"
httpclient = "0.20.2"
serde_json = "1.0.81"

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.18.2"
features = ["full"]
